--- a/mvcMember/WebContent/css/member.css
+++ b/mvcMember/WebContent/css/member.css
@@ -1,44 +1,13 @@
 @charset "UTF-8";
-*{
-	font-family : 'Jeju Gothic', sans-serif;
+th {
+	font-size:8pt;
+	background-color: #cccccc
+}  
+td {
+	font-size:8pt
 }
 
-table {
-	border-collapse: collapse;
-	width: 100%;
-	}
-	
-	th, td {
-	padding: 8px;
-	text-align: left;
-	border-bottom: 1px solid #ddd;
-
-	}
-	#addressA:link {
-		color:black;
-		text-decoration: none;
-	}
-	#addressA:visited {
-		color:black;
-		
-		
-	}
-	#addressA:hover{
-		color : #3385ff;
-		
-	}
-	#addressA:active {
-		color:black;
-		text-decoration: none;
-	}
-	
-	#button1{
-	background-color: white; 
-  	color: black; 
-  	border: 2px solid #3385ff;
-	}
-	
-	#button1:hover{
-	background-color: #3385ff;
-  	color: white;
-	}
+#addressA:link{color: black; text-decoration: none;}
+#addressA:visited{color: black; text-decoration: none;}
+#addressA:hover{color: green; text-decoration: none; font-weight: bold;}
+#addressA:active{color: black; text-decoration: none;}   
