--- a/miniProject/WebContent/css/member.css
+++ b/miniProject/WebContent/css/member.css
@@ -24,7 +24,7 @@ table {
 		
 	}
 	#addressA:hover{
-		color : #3385ff;
+		color :#009933;
 		
 	}
 	#addressA:active {
@@ -35,10 +35,10 @@ table {
 	#button1{
 	background-color: white; 
   	color: black; 
-  	border: 2px solid #3385ff;
+  	border: 2px solid #009933;
 	}
 	
 	#button1:hover{
-	background-color: #3385ff;
+	background-color:#009933;
   	color: white;
 	}
