--- a/miniProject/WebContent/css/writeFormCss.css
+++ b/miniProject/WebContent/css/writeFormCss.css
@@ -20,29 +20,41 @@ th, td {
 	margin-bottom: 5px;
 }
 
-#button0, #button1, #button2, #button3 {
+#button0, #button1, #button2, #button3, #button4, #button5, #button6 {
 	text-align: center;
 	background-color: white;
 	color: black;
-	border: 2px solid #3385ff;
+	border: 2px solid #009933;
 }
 
 #button0:hover {
-	background-color: #3385ff;
+	background-color: #009933;
 	color: white;
 }
 
 #button1:hover {
-	background-color: #3385ff;
+	background-color: #009933;
 	color: white;
 }
 
 #button2:hover {
-	background-color: #3385ff;
+	background-color: #009933;
 	color: white;
 }
 
 #button3:hover {
-	background-color: #3385ff;
+	background-color: #009933;
+	color: white;
+}
+#button4:hover {
+	background-color: #009933;
+	color: white;
+}
+#button5:hover {
+	background-color: #009933;
+	color: white;
+}
+#button6:hover {
+	background-color: #009933;
 	color: white;
 }
